Build XNNPACK as an ExternalProject
I believe this is necessary to support EXPORT. (We probably should not
land this unless we have a PR stacked on top of this that successfully
converts the build to EXPORT; sending this out so I can get CI going)

ghstack-source-id: 0aa08b8340e3e7363613f1be9e23a0b61164153f
ghstack-comment-id: 3067161235
Pull-Request: https://github.com/pytorch/executorch/pull/12425

--- a/backends/xnnpack/CMakeLists.txt
+++ b/backends/xnnpack/CMakeLists.txt
@@ -92,9 +92,8 @@ target_include_directories(
                            ${EXECUTORCH_ROOT}/third-party/flatbuffers/include
 )
 
-set(xnnpack_third_party pthreadpool extension_threadpool cpuinfo)
-
 include(cmake/Dependencies.cmake)
+set(xnnpack_third_party XNNPACK pthreadpool extension_threadpool cpuinfo)
 
 list(TRANSFORM _xnnpack_backend__srcs PREPEND "${EXECUTORCH_ROOT}/")
 add_library(xnnpack_backend ${_xnnpack_backend__srcs})
