--- a/backends/vulkan/runtime/graph/ops/glsl/transfer_texture.yaml
+++ b/backends/vulkan/runtime/graph/ops/glsl/transfer_texture.yaml
@@ -2,6 +2,7 @@ transfer_texture:
   parameter_names_with_default_values:
     DTYPE: float
     OP_NAME: select
+    UBO_PARAMS: False
   generate_variant_forall:
     DTYPE:
       - VALUE: half
@@ -11,3 +12,9 @@ transfer_texture:
       OP_NAME: select
     - NAME: slice_texture3d
       OP_NAME: slice
+    - NAME: select_ubo_texture3d
+      OP_NAME: select
+      UBO_PARAMS: True
+    - NAME: slice_ubo_texture3d
+      OP_NAME: slice
+      UBO_PARAMS: True
